cmake_minimum_required(VERSION 3.17)
project(LPI C)

set(CMAKE_C_STANDARD 99)

add_executable(LPI main.c
        #--------------------------------------PR------------------------------------
        #pr01.c pr01.h
        #pr02.c pr02.h
        #pr03.c pr03.h
        #pr04.c pr04.h
        #pr05.c pr05.h
        #pr06.c pr06.h
        #pr07.c pr07.h
        #pr08.c pr08.h
        #pr09.c pr09.h
        #pr10.c pr10.h
        pr11.c pr11.h

        #--------------------------------------TP------------------------------------
        #tp02.c tp02.h
        #tp03.c tp03.h
        #tp04.c tp04.h
        #tp05.c tp05.h
        #tp06.c tp06.h
        #tp07e08.c tp07e08.h
        #tp09.c tp09.h
        tp11.c tp11.h

        tp12.c tp12.h pr12.c pr12.h)